--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "react-big-calendar",
-  "version": "1.19.4",
-  "description": "Calendar! with events",
+  "name": "@scalartech/react-big-calendar",
+  "version": "1.19.4+scalar.1",
+  "description": "Calendar! with events. Scalar Version",
   "author": {
     "name": "Jason Quense",
     "email": "monastic.panic@gmail.com"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jquense/react-big-calendar.git"
+    "url": "git+https://github.com/scalartech/react-big-calendar.git"
   },
   "publishConfig": {
     "access": "public",
@@ -128,7 +128,7 @@
     "uncontrollable": "^7.2.1"
   },
   "bugs": {
-    "url": "https://github.com/jquense/react-big-calendar/issues"
+    "url": "https://github.com/scalartech/react-big-calendar/issues"
   },
-  "homepage": "https://github.com/jquense/react-big-calendar#readme"
+  "homepage": "https://github.com/scalartech/react-big-calendar#readme"
 }
